# libmysqlasync

./: CMakeLists.txt
cmake/: FindMySQL.cmake
src/: msa.c
tests/: CMakeLists.txt  test1.c
